added basic code for register and login form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "tests/App.test.tsx"],
+  "include": ["src", "tests/App.test.tsx", "testConfig"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
